--- a/index.html
+++ b/index.html
@@ -17,48 +17,60 @@
     }
 
     .card {
-        width: 350px;
+        width: 400px;
         background-color: #fff;
         border-radius: 15px;
         box-shadow: 0 10px 25px rgba(0,0,0,0.15);
         overflow: hidden;
-        text-align: center;
+        text-align: right; /* النص على اليمين */
+        direction: rtl; /* لضبط اللغة العربية على اليمين */
     }
 
-    .card .cover {
+    .cover {
         width: 100%;
-        height: 120px;
-        background: url('https://via.placeholder.com/350x120') center/cover no-repeat;
+        height: 180px;
+        background: url('https://via.placeholder.com/400x180') center/cover no-repeat;
         position: relative;
+        padding: 15px;
+        box-sizing: border-box;
+        display: flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+    }
+
+    .profile-info {
+        display: flex;
+        align-items: center;
+        gap: 15px;
+        background: rgba(255, 255, 255, 0.7);
+        padding: 10px 15px;
+        border-radius: 10px;
     }
 
     .profile-img {
-        width: 100px;
-        height: 100px;
+        width: 70px;
+        height: 70px;
         border-radius: 50%;
-        border: 4px solid #fff;
-        position: absolute;
-        bottom: -50px;
-        left: 50%;
-        transform: translateX(-50%);
-        background: url('https://via.placeholder.com/100') center/cover no-repeat;
+        background: url('https://via.placeholder.com/70') center/cover no-repeat;
+        border: 2px solid #fff;
     }
 
-    .card-content {
-        padding: 60px 20px 20px;
-    }
-
-    .card-content h2 {
+    .profile-text h2 {
         margin: 0;
-        font-size: 22px;
+        font-size: 18px;
         color: #333;
     }
 
-    .card-content p {
-        margin: 10px 0 0;
-        font-size: 14px;
-        color: #666;
-        line-height: 1.4;
+    .profile-text p {
+        margin: 2px 0 0;
+        font-size: 13px;
+        color: #555;
+        line-height: 1.2;
+    }
+
+    .card-content {
+        padding: 20px;
+        text-align: center;
     }
 </style>
 </head>
@@ -66,11 +78,16 @@
 
 <div class="card">
     <div class="cover">
-        <div class="profile-img"></div>
+        <div class="profile-info">
+            <div class="profile-text">
+                <h2>اسمك هنا</h2>
+                <p>هذا وصفك الشخصي من سطر أو سطرين</p>
+            </div>
+            <div class="profile-img"></div>
+        </div>
     </div>
     <div class="card-content">
-        <h2>اسمك هنا</h2>
-        <p>هذا وصفك الشخصي من سطر أو سطرين يوضح نبذة عنك أو اهتماماتك.</p>
+        <p>يمكنك هنا إضافة أي محتوى إضافي للكارت مثل روابط التواصل أو نبذة أكبر.</p>
     </div>
 </div>
 
