--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>الصفحة الشخصية</title>
+<!-- استدعاء خط Tajawal من Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
 <style>
     body {
         margin: 0;
         padding: 0;
-        font-family: Arial, sans-serif;
+        font-family: 'Tajawal', Arial, sans-serif;
         background-color: #f0f2f5;
         display: flex;
         justify-content: center;
@@ -22,23 +24,26 @@
         border-radius: 15px;
         box-shadow: 0 10px 25px rgba(0,0,0,0.15);
         overflow: hidden;
-        text-align: right; /* النص على اليمين */
-        direction: rtl; /* لضبط اللغة العربية على اليمين */
+        text-align: right;
+        direction: rtl;
     }
 
     .cover {
         width: 100%;
         height: 180px;
-        background: url('https://via.placeholder.com/400x180') center/cover no-repeat;
         position: relative;
-        padding: 15px;
-        box-sizing: border-box;
-        display: flex;
-        align-items: flex-end;
-        justify-content: flex-end;
+    }
+
+    .cover img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
     .profile-info {
+        position: absolute;
+        bottom: 15px;
+        right: 15px;
         display: flex;
         align-items: center;
         gap: 15px;
@@ -51,8 +56,8 @@
         width: 70px;
         height: 70px;
         border-radius: 50%;
-        background: url('https://via.placeholder.com/70') center/cover no-repeat;
         border: 2px solid #fff;
+        object-fit: cover;
     }
 
     .profile-text h2 {
@@ -78,12 +83,13 @@
 
 <div class="card">
     <div class="cover">
+        <img src="https://via.placeholder.com/400x180" alt="غلاف">
         <div class="profile-info">
             <div class="profile-text">
                 <h2>اسمك هنا</h2>
                 <p>هذا وصفك الشخصي من سطر أو سطرين</p>
             </div>
-            <div class="profile-img"></div>
+            <img class="profile-img" src="https://img.alfrsantv.com/img/f176478064193331.png" alt="صورة شخصية">
         </div>
     </div>
     <div class="card-content">
