--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     .cover img {
         width: 100%;
         height: 100%;
-        object-fit: cover;
+        object-fit: cover; /* الغلاف يغطي بالكامل */
     }
 
     .profile-info {
@@ -57,7 +57,7 @@
         height: 70px;
         border-radius: 50%;
         border: 2px solid #fff;
-        object-fit: cover;
+        object-fit: cover; /* يملأ الدائرة بدون تشويه */
     }
 
     .profile-text h2 {
@@ -83,12 +83,14 @@
 
 <div class="card">
     <div class="cover">
+        <!-- صورة الغلاف -->
         <img src="https://via.placeholder.com/400x180" alt="غلاف">
         <div class="profile-info">
             <div class="profile-text">
                 <h2>اسمك هنا</h2>
                 <p>هذا وصفك الشخصي من سطر أو سطرين</p>
             </div>
+            <!-- الصورة الشخصية -->
             <img class="profile-img" src="https://img.alfrsantv.com/img/f176478064193331.png" alt="صورة شخصية">
         </div>
     </div>
