--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <div class="card">
     <div class="cover">
         <!-- صورة الغلاف -->
-        <img src="https://via.placeholder.com/400x180" alt="غلاف">
+        <img src="https://img.alfrsantv.com/img/f176585324646111.jpg" alt="غلاف">
         <div class="profile-info">
             <div class="profile-text">
                 <h2>اسمك هنا</h2>
