--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
         <img src="https://img.alfrsantv.com/img/f176585324646111.jpg" alt="غلاف">
         <div class="profile-info">
             <div class="profile-text">
-                <h2>اسمك هنا</h2>
-                <p>هذا وصفك الشخصي من سطر أو سطرين</p>
+                <h2>𝑻𝒖𝒍𝒊𝒑</h2>
+                <p>مميزْهـ بَڪلُِ تفُآصيلُِي ، حٍتﮯ آسمي لُِآ يلُِيقٌ لُِغيري</p>
             </div>
             <!-- الصورة الشخصية -->
             <img class="profile-img" src="https://img.alfrsantv.com/img/f176478064193331.png" alt="صورة شخصية">
