--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
         width: 100%;
         height: 180px;
         position: relative;
+        overflow: hidden; /* يمنع تجاوز الصورة الشخصية */
     }
 
     .cover img {
         width: 100%;
         height: 100%;
         object-fit: cover; /* الغلاف يغطي بالكامل */
+        display: block;
     }
 
     .profile-info {
@@ -47,7 +49,7 @@
         display: flex;
         align-items: center;
         gap: 15px;
-        background: rgba(255, 255, 255, 0.7);
+        background: rgba(255, 255, 255, 0.85);
         padding: 10px 15px;
         border-radius: 10px;
     }
@@ -58,6 +60,7 @@
         border-radius: 50%;
         border: 2px solid #fff;
         object-fit: cover; /* يملأ الدائرة بدون تشويه */
+        flex-shrink: 0; /* تمنع الصورة من الانكماش */
     }
 
     .profile-text h2 {
