--- a/index.html
+++ b/index.html
@@ -4,97 +4,105 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>الصفحة الشخصية</title>
-<!-- استدعاء خط Tajawal من Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
 <style>
-    body {
-        margin: 0;
-        padding: 0;
-        font-family: 'Tajawal', Arial, sans-serif;
-        background-color: #f0f2f5;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-    }
+body {
+    margin: 0;
+    padding: 0;
+    font-family: 'Tajawal', Arial, sans-serif;
+    background-color: #f0f2f5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
 
-    .card {
-        width: 400px;
-        background-color: #fff;
-        border-radius: 15px;
-        box-shadow: 0 10px 25px rgba(0,0,0,0.15);
-        overflow: hidden;
-        text-align: right;
-        direction: rtl;
-    }
+.card {
+    width: 400px;
+    background-color: #fff;
+    border-radius: 15px;
+    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+    overflow: hidden;
+    text-align: right;
+    direction: rtl;
+}
 
-    .cover {
-        width: 100%;
-        height: 180px;
-        position: relative;
-        overflow: hidden; /* يمنع تجاوز الصورة الشخصية */
-    }
+.cover {
+    width: 100%;
+    height: 180px;
+    position: relative;
+    overflow: hidden;
+}
 
-    .cover img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover; /* الغلاف يغطي بالكامل */
-        display: block;
-    }
+.cover img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
 
-    .profile-info {
-        position: absolute;
-        bottom: 15px;
-        right: 15px;
-        display: flex;
-        align-items: center;
-        gap: 15px;
-        background: rgba(255, 255, 255, 0.85);
-        padding: 10px 15px;
-        border-radius: 10px;
-    }
+.profile-info {
+    position: absolute;
+    bottom: 15px;
+    right: 15px;
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    background: rgba(255, 255, 255, 0.85);
+    padding: 10px 15px;
+    border-radius: 10px;
+    max-width: calc(100% - 30px); /* لضبط حجم الحاوية داخل الغلاف */
+    box-sizing: border-box;
+}
 
-    .profile-img {
-        width: 70px;
-        height: 70px;
-        border-radius: 50%;
-        border: 2px solid #fff;
-        object-fit: cover; /* يملأ الدائرة بدون تشويه */
-        flex-shrink: 0; /* تمنع الصورة من الانكماش */
-    }
+.profile-img-wrapper {
+    width: 70px;
+    height: 70px;
+    flex-shrink: 0;
+    border-radius: 50%;
+    overflow: hidden;
+    border: 2px solid #fff;
+}
 
-    .profile-text h2 {
-        margin: 0;
-        font-size: 18px;
-        color: #333;
-    }
+.profile-img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block;
+}
 
-    .profile-text p {
-        margin: 2px 0 0;
-        font-size: 13px;
-        color: #555;
-        line-height: 1.2;
-    }
+.profile-text h2 {
+    margin: 0;
+    font-size: 18px;
+    color: #333;
+}
 
-    .card-content {
-        padding: 20px;
-        text-align: center;
-    }
+.profile-text p {
+    margin: 2px 0 0;
+    font-size: 13px;
+    color: #555;
+    line-height: 1.2;
+}
+
+.card-content {
+    padding: 20px;
+    text-align: center;
+}
 </style>
 </head>
 <body>
 
 <div class="card">
     <div class="cover">
-        <!-- صورة الغلاف -->
         <img src="https://img.alfrsantv.com/img/f176585324646111.jpg" alt="غلاف">
         <div class="profile-info">
             <div class="profile-text">
                 <h2>𝑻𝒖𝒍𝒊𝒑</h2>
                 <p>مميزْهـ بَڪلُِ تفُآصيلُِي ، حٍتﮯ آسمي لُِآ يلُِيقٌ لُِغيري</p>
             </div>
-            <!-- الصورة الشخصية -->
-            <img class="profile-img" src="https://img.alfrsantv.com/img/f176478064193331.png" alt="صورة شخصية">
+            <div class="profile-img-wrapper">
+                <img src="https://img.alfrsantv.com/img/f176478064193331.png" alt="صورة شخصية">
+            </div>
         </div>
     </div>
     <div class="card-content">
