--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 }
 
 .card {
-    width: 400px;
+    width: 500px; /* أكبر من السابق */
     background-color: #fff;
     border-radius: 15px;
     box-shadow: 0 10px 25px rgba(0,0,0,0.15);
@@ -29,7 +29,7 @@ body {
 
 .cover {
     width: 100%;
-    height: 180px;
+    height: 220px; /* أكبر من السابق */
     position: relative;
     overflow: hidden;
 }
@@ -43,21 +43,21 @@ body {
 
 .profile-info {
     position: absolute;
-    bottom: 15px;
-    right: 15px;
+    bottom: 20px;
+    right: 20px;
     display: flex;
     align-items: center;
-    gap: 15px;
+    gap: 20px;
     background: rgba(255, 255, 255, 0.85);
-    padding: 10px 15px;
+    padding: 15px 20px;
     border-radius: 10px;
-    max-width: calc(100% - 30px); /* لضبط حجم الحاوية داخل الغلاف */
+    max-width: calc(100% - 40px);
     box-sizing: border-box;
 }
 
 .profile-img-wrapper {
-    width: 70px;
-    height: 70px;
+    width: 90px; /* أكبر حجم للصورة الشخصية */
+    height: 90px;
     flex-shrink: 0;
     border-radius: 50%;
     overflow: hidden;
@@ -71,22 +71,29 @@ body {
     display: block;
 }
 
+.profile-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 .profile-text h2 {
     margin: 0;
-    font-size: 18px;
+    font-size: 22px; /* أكبر */
     color: #333;
 }
 
 .profile-text p {
-    margin: 2px 0 0;
-    font-size: 13px;
+    margin: 5px 0 0;
+    font-size: 14px; /* أكبر */
     color: #555;
-    line-height: 1.2;
+    line-height: 1.3;
 }
 
 .card-content {
-    padding: 20px;
+    padding: 25px;
     text-align: center;
+    font-size: 15px; /* أكبر قليلاً */
 }
 </style>
 </head>
@@ -96,12 +103,12 @@ body {
     <div class="cover">
         <img src="https://img.alfrsantv.com/img/f176585324646111.jpg" alt="غلاف">
         <div class="profile-info">
+            <div class="profile-img-wrapper">
+                <img src="https://img.alfrsantv.com/img/f176478064193331.png" alt="صورة شخصية">
+            </div>
             <div class="profile-text">
                 <h2>𝑻𝒖𝒍𝒊𝒑</h2>
                 <p>مميزْهـ بَڪلُِ تفُآصيلُِي ، حٍتﮯ آسمي لُِآ يلُِيقٌ لُِغيري</p>
-            </div>
-            <div class="profile-img-wrapper">
-                <img src="https://img.alfrsantv.com/img/f176478064193331.png" alt="صورة شخصية">
             </div>
         </div>
     </div>
