--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 }
 
 .card {
-    width: 500px; /* أكبر من السابق */
+    width: 500px;
     background-color: #fff;
     border-radius: 15px;
     box-shadow: 0 10px 25px rgba(0,0,0,0.15);
@@ -29,7 +29,7 @@ body {
 
 .cover {
     width: 100%;
-    height: 220px; /* أكبر من السابق */
+    height: 220px;
     position: relative;
     overflow: hidden;
 }
@@ -39,6 +39,8 @@ body {
     height: 100%;
     object-fit: cover;
     display: block;
+    user-select: none; /* منع التحديد */
+    -webkit-user-drag: none; /* منع السحب على كروم وسفاري */
 }
 
 .profile-info {
@@ -56,12 +58,17 @@ body {
 }
 
 .profile-img-wrapper {
-    width: 90px; /* أكبر حجم للصورة الشخصية */
+    width: 90px;
     height: 90px;
     flex-shrink: 0;
     border-radius: 50%;
     overflow: hidden;
     border: 2px solid #fff;
+    transition: transform 0.5s ease; /* حركة سلسة */
+}
+
+.profile-img-wrapper:hover {
+    transform: rotate(15deg); /* دوران بسيط عند المرور */
 }
 
 .profile-img-wrapper img {
@@ -69,6 +76,9 @@ body {
     height: 100%;
     object-fit: cover;
     display: block;
+    pointer-events: none; /* منع النقر والسحب على الصورة */
+    user-select: none;
+    -webkit-user-drag: none;
 }
 
 .profile-text {
@@ -79,13 +89,13 @@ body {
 
 .profile-text h2 {
     margin: 0;
-    font-size: 22px; /* أكبر */
+    font-size: 22px;
     color: #333;
 }
 
 .profile-text p {
     margin: 5px 0 0;
-    font-size: 14px; /* أكبر */
+    font-size: 14px;
     color: #555;
     line-height: 1.3;
 }
@@ -93,7 +103,7 @@ body {
 .card-content {
     padding: 25px;
     text-align: center;
-    font-size: 15px; /* أكبر قليلاً */
+    font-size: 15px;
 }
 </style>
 </head>
