--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
 }
 
 .card {
@@ -39,8 +39,8 @@ body {
     height: 100%;
     object-fit: cover;
     display: block;
-    user-select: none; /* منع التحديد */
-    -webkit-user-drag: none; /* منع السحب على كروم وسفاري */
+    user-select: none;
+    -webkit-user-drag: none;
 }
 
 .profile-info {
@@ -64,11 +64,11 @@ body {
     border-radius: 50%;
     overflow: hidden;
     border: 2px solid #fff;
-    transition: transform 0.5s ease; /* حركة سلسة */
+    transition: transform 0.5s ease;
 }
 
 .profile-img-wrapper:hover {
-    transform: rotate(15deg); /* دوران بسيط عند المرور */
+    transform: rotate(15deg);
 }
 
 .profile-img-wrapper img {
@@ -76,7 +76,7 @@ body {
     height: 100%;
     object-fit: cover;
     display: block;
-    pointer-events: none; /* منع النقر والسحب على الصورة */
+    pointer-events: none;
     user-select: none;
     -webkit-user-drag: none;
 }
@@ -100,12 +100,39 @@ body {
     line-height: 1.3;
 }
 
+.info-bar {
+    display: flex;
+    justify-content: space-around;
+    background-color: #fafafa;
+    padding: 15px 10px;
+    border-top: 1px solid #ddd;
+    font-size: 14px;
+}
+
+.info-item {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+}
+
+.info-item i {
+    font-size: 18px;
+    color: #7c3aed; /* لون الأيقونة */
+}
+
+.info-item a {
+    text-decoration: none;
+    color: #333;
+}
+
 .card-content {
     padding: 25px;
     text-align: center;
     font-size: 15px;
 }
 </style>
+<!-- استدعاء أيقونات من FontAwesome -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
 
@@ -122,6 +149,27 @@ body {
             </div>
         </div>
     </div>
+
+    <!-- شريط المعلومات -->
+    <div class="info-bar">
+        <div class="info-item">
+            <i class="fas fa-smile"></i>
+            <span>المزاج: سعيد</span>
+        </div>
+        <div class="info-item">
+            <i class="fas fa-star"></i>
+            <span>الهواية: رسم</span>
+        </div>
+        <div class="info-item">
+            <i class="fas fa-palette"></i>
+            <span>اللون المفضل: بنفسجي</span>
+        </div>
+        <div class="info-item">
+            <i class="fas fa-comment-dots"></i>
+            <a href="https://chat.example.com" target="_blank">دردشتي</a>
+        </div>
+    </div>
+
     <div class="card-content">
         <p>يمكنك هنا إضافة أي محتوى إضافي للكارت مثل روابط التواصل أو نبذة أكبر.</p>
     </div>
