--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 }
 
 .card {
-    width: 500px;
+    width: 550px; /* تكبير الكارت */
     background-color: #fff;
     border-radius: 15px;
     box-shadow: 0 10px 25px rgba(0,0,0,0.15);
@@ -29,7 +29,7 @@ body {
 
 .cover {
     width: 100%;
-    height: 220px;
+    height: 240px; /* تكبير الغلاف */
     position: relative;
     overflow: hidden;
 }
@@ -45,13 +45,13 @@ body {
 
 .profile-info {
     position: absolute;
-    bottom: 7px;
-    right: 7px;
+    bottom: 15px;
+    right: 15px;
     display: flex;
     align-items: center;
     gap: 20px;
     background: rgba(255, 255, 255, 0.85);
-    padding: 2px 5px;
+    padding: 10px 15px;
     border-radius: 10px;
     max-width: calc(100% - 40px);
     box-sizing: border-box;
@@ -107,17 +107,19 @@ body {
     padding: 15px 10px;
     border-top: 1px solid #ddd;
     font-size: 14px;
+    flex-wrap: wrap;
 }
 
 .info-item {
     display: flex;
     align-items: center;
     gap: 8px;
+    margin: 5px 0;
 }
 
 .info-item i {
     font-size: 18px;
-    color: #7c3aed; /* لون الأيقونة */
+    color: #7c3aed;
 }
 
 .info-item a {
@@ -131,7 +133,6 @@ body {
     font-size: 15px;
 }
 </style>
-<!-- استدعاء أيقونات من FontAwesome -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
@@ -166,7 +167,7 @@ body {
         </div>
         <div class="info-item">
             <i class="fas fa-comment-dots"></i>
-            <a href="https://chat.example.com" target="_blank">دردشتي</a>
+            <a href="https://melody.example.com" target="_blank">دردشتي المفضلة: ميلودى</a>
         </div>
     </div>
 
