--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ body {
 }
 
 .card {
-    width: 550px; /* تكبير الكارت */
+    width: 550px;
     background-color: #fff;
     border-radius: 15px;
     box-shadow: 0 10px 25px rgba(0,0,0,0.15);
@@ -29,7 +29,7 @@ body {
 
 .cover {
     width: 100%;
-    height: 240px; /* تكبير الغلاف */
+    height: 240px;
     position: relative;
     overflow: hidden;
 }
@@ -49,7 +49,7 @@ body {
     right: 15px;
     display: flex;
     align-items: center;
-    gap: 20px;
+    gap: 15px; /* تخفيض المسافة بين الصورة والنص */
     background: rgba(255, 255, 255, 0.85);
     padding: 10px 15px;
     border-radius: 10px;
@@ -102,19 +102,19 @@ body {
 
 .info-bar {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between; /* توزيع متساوي للعناصر */
     background-color: #fafafa;
-    padding: 15px 10px;
+    padding: 12px 10px; /* تقليل الحشو لزيادة الانضباط */
     border-top: 1px solid #ddd;
     font-size: 14px;
     flex-wrap: wrap;
+    gap: 10px; /* مسافة عقلانية بين العناصر */
 }
 
 .info-item {
     display: flex;
     align-items: center;
-    gap: 8px;
-    margin: 5px 0;
+    gap: 6px; /* مسافة أصغر بين الأيقونة والنص */
 }
 
 .info-item i {
