--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>الصفحة الشخصية</title>
+<title>Tulip</title>
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
 <style>
 body {
@@ -145,7 +145,7 @@ body {
                 <img src="https://img.alfrsantv.com/img/f176478064193331.png" alt="صورة شخصية">
             </div>
             <div class="profile-text">
-                <h2>𝑻𝒖𝒍𝒊𝒑</h2>
+                <h2>𝓽𝓾𝓵𝓲𝓹</h2>
                 <p>مميزْهـ بَڪلُِ تفُآصيلُِي ، حٍتﮯ آسمي لُِآ يلُِيقٌ لُِغيري</p>
             </div>
         </div>
