--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@ body {
         </div>
         <div class="info-item">
             <i class="fas fa-palette"></i>
-            <span>اللون المفضل: بنفسجي</span>
+            <span>اللون: بنفسجي</span>
         </div>
         <div class="info-item">
             <i class="fas fa-comment-dots"></i>
-            <a href="https://melody.example.com" target="_blank">دردشتي المفضلة: ميلودى</a>
+            <a href="https://melody.example.com" target="_blank">دردشتي: ميلودى</a>
         </div>
     </div>
 
