--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Tulip</title>
+<title>الصفحة الشخصية</title>
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
 <style>
 body {
     margin: 0;
     padding: 0;
     font-family: 'Tajawal', Arial, sans-serif;
-    background-color: #f0f2f5;
+    /* خلفية متدرجة خارجية */
+    background: linear-gradient(135deg, #7c3aed, #f0a6ff);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -19,12 +20,18 @@ body {
 
 .card {
     width: 550px;
-    background-color: #fff;
-    border-radius: 15px;
-    box-shadow: 0 10px 25px rgba(0,0,0,0.15);
+    background-color: #ffffffdd; /* لون الكارت مع شفافية بسيطة */
+    border-radius: 20px;
+    box-shadow: 0 15px 35px rgba(0,0,0,0.2);
     overflow: hidden;
     text-align: right;
     direction: rtl;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 20px 45px rgba(0,0,0,0.3);
 }
 
 .cover {
@@ -52,7 +59,7 @@ body {
     gap: 15px;
     background: rgba(255, 255, 255, 0.85);
     padding: 10px 15px;
-    border-radius: 10px;
+    border-radius: 12px;
     max-width: calc(100% - 40px);
     box-sizing: border-box;
 }
@@ -89,32 +96,39 @@ body {
 
 .profile-text h2 {
     margin: 0;
-    font-size: 22px;
-    color: #333;
+    font-size: 24px;
+    color: #7c3aed; /* لون الاسم */
+    text-shadow: 1px 1px 5px rgba(124, 58, 237, 0.7); /* تأثير على الاسم */
 }
 
 .profile-text p {
     margin: 5px 0 0;
-    font-size: 14px;
+    font-size: 15px;
     color: #555;
-    line-height: 1.3;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.1); /* تأثير خفيف على الوصف */
 }
 
 .info-bar {
     display: flex;
-    justify-content: space-between; /* توزيع متساوي */
-    background-color: #fafafa;
-    padding: 12px 20px; /* padding محسوب */
+    justify-content: space-between;
+    background-color: #ffffffcc; /* لون الكارت مع شفافية بسيطة */
+    padding: 12px 20px;
     border-top: 1px solid #ddd;
     font-size: 14px;
-    flex-wrap: nowrap; /* لا تسمح بالانتقال لسطر آخر */
+    flex-wrap: nowrap;
 }
 
 .info-item {
     display: flex;
     align-items: center;
     gap: 6px;
-    flex: 1; /* كل عنصر يأخذ مساحة متساوية */
+    flex: 1;
+    transition: transform 0.3s ease, color 0.3s ease;
+}
+
+.info-item:hover {
+    transform: translateY(-2px);
+    color: #7c3aed;
 }
 
 .info-item i {
@@ -145,7 +159,7 @@ body {
                 <img src="https://img.alfrsantv.com/img/f176478064193331.png" alt="صورة شخصية">
             </div>
             <div class="profile-text">
-                <h2>𝓽𝓾𝓵𝓲𝓹</h2>
+                <h2>𝑻𝒖𝒍𝒊𝒑</h2>
                 <p>مميزْهـ بَڪلُِ تفُآصيلُِي ، حٍتﮯ آسمي لُِآ يلُِيقٌ لُِغيري</p>
             </div>
         </div>
@@ -163,11 +177,11 @@ body {
         </div>
         <div class="info-item">
             <i class="fas fa-palette"></i>
-            <span>اللون: بنفسجي</span>
+            <span>اللون المفضل: بنفسجي</span>
         </div>
         <div class="info-item">
             <i class="fas fa-comment-dots"></i>
-            <a href="https://melody.example.com" target="_blank">دردشتي: ميلودى</a>
+            <a href="https://melody.example.com" target="_blank">دردشتي المفضلة: ميلودى</a>
         </div>
     </div>
 
