--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>الصفحة الشخصية</title>
+<title>Tulip</title>
 <link href="https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
 <style>
 body {
     margin: 0;
     padding: 0;
     font-family: 'Tajawal', Arial, sans-serif;
-    /* خلفية متدرجة خارجية */
-    background: linear-gradient(135deg, #7c3aed, #f0a6ff);
+    /* خلفية خارجية متدرجة */
+    background: linear-gradient(135deg, #4facfe, #00f2fe);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,7 +20,7 @@ body {
 
 .card {
     width: 550px;
-    background-color: #ffffffdd; /* لون الكارت مع شفافية بسيطة */
+    background-color: #ffffffdd; /* لون الكارت مناسب وشفاف قليلًا */
     border-radius: 20px;
     box-shadow: 0 15px 35px rgba(0,0,0,0.2);
     overflow: hidden;
@@ -97,21 +97,21 @@ body {
 .profile-text h2 {
     margin: 0;
     font-size: 24px;
-    color: #7c3aed; /* لون الاسم */
-    text-shadow: 1px 1px 5px rgba(124, 58, 237, 0.7); /* تأثير على الاسم */
+    color: #ff6b6b; /* لون الاسم أحمر جاذب */
+    text-shadow: 1px 1px 5px rgba(255, 107, 107, 0.7); /* تأثير glow على الاسم */
 }
 
 .profile-text p {
     margin: 5px 0 0;
     font-size: 15px;
-    color: #555;
+    color: #333;
     text-shadow: 1px 1px 2px rgba(0,0,0,0.1); /* تأثير خفيف على الوصف */
 }
 
 .info-bar {
     display: flex;
     justify-content: space-between;
-    background-color: #ffffffcc; /* لون الكارت مع شفافية بسيطة */
+    background-color: #f9f9f9cc; /* لون الكارت مع شفافية */
     padding: 12px 20px;
     border-top: 1px solid #ddd;
     font-size: 14px;
@@ -128,12 +128,12 @@ body {
 
 .info-item:hover {
     transform: translateY(-2px);
-    color: #7c3aed;
+    color: #ff6b6b; /* تغيير لون النص عند المرور */
 }
 
 .info-item i {
     font-size: 18px;
-    color: #7c3aed;
+    color: #ff6b6b; /* لون الأيقونات */
 }
 
 .info-item a {
@@ -159,7 +159,7 @@ body {
                 <img src="https://img.alfrsantv.com/img/f176478064193331.png" alt="صورة شخصية">
             </div>
             <div class="profile-text">
-                <h2>𝑻𝒖𝒍𝒊𝒑</h2>
+                <h2>𝓽𝓾𝓵𝓲𝓹</h2>
                 <p>مميزْهـ بَڪلُِ تفُآصيلُِي ، حٍتﮯ آسمي لُِآ يلُِيقٌ لُِغيري</p>
             </div>
         </div>
@@ -177,11 +177,11 @@ body {
         </div>
         <div class="info-item">
             <i class="fas fa-palette"></i>
-            <span>اللون المفضل: بنفسجي</span>
+            <span>اللون: أزرق</span>
         </div>
         <div class="info-item">
             <i class="fas fa-comment-dots"></i>
-            <a href="https://melody.example.com" target="_blank">دردشتي المفضلة: ميلودى</a>
+            <a href="https://melody.example.com" target="_blank">دردشتي: ميلودى</a>
         </div>
     </div>
 
