--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ body {
 }
 
 .card {
-    width: 550px;
+    width: 600px;
     background-color: #ffffffdd;
     border-radius: 20px;
     box-shadow: 0 15px 35px rgba(0,0,0,0.2);
@@ -148,9 +148,9 @@ body {
     font-size: 15px;
 }
 
-/* تصميم الزر */
+/* زر "اضغط هنا" */
 .action-btn {
-    background-color: #0072ff;
+    background-color: #ff8c00;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -161,16 +161,75 @@ body {
 }
 
 .action-btn:hover {
-    background-color: #00c6ff;
+    background-color: #ffa733;
 }
 
-/* صندوق العبارات المتغيرة */
-.typing-container {
+/* زر شفاف للعبارات المتغيرة */
+.typing-btn {
+    background-color: rgba(0, 114, 255, 0.1);
+    border: 2px solid #0072ff;
+    border-radius: 12px;
+    padding: 8px 12px;
     font-size: 16px;
     color: #0072ff;
-    min-height: 24px;
-    text-align: right;
     font-weight: bold;
+    display: inline-block;
+    min-width: 200px;
+    text-align: center;
+}
+
+/* خط فاصل */
+.divider {
+    height: 1px;
+    background-color: #ddd;
+    margin: 20px 0;
+}
+
+/* زر فيديوهاتي */
+.videos-btn {
+    background-color: #00c6ff;
+    color: #fff;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-size: 16px;
+    margin-bottom: 10px;
+}
+
+.videos-btn:hover {
+    background-color: #0072ff;
+}
+
+/* معرض الفيديوهات */
+.videos-container {
+    display: flex;
+    gap: 10px;
+    overflow-x: auto;
+    padding-bottom: 10px;
+}
+
+.video-item {
+    flex: 0 0 30%; /* يظهر 3 فيديوهات فقط */
+    height: 120px;
+    background-color: #eee;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: bold;
+    color: #555;
+    cursor: pointer;
+    min-width: 30%;
+}
+
+.videos-container::-webkit-scrollbar {
+    height: 8px;
+}
+
+.videos-container::-webkit-scrollbar-thumb {
+    background-color: #0072ff;
+    border-radius: 4px;
 }
 </style>
 </head>
@@ -216,8 +275,26 @@ body {
         <div style="text-align: right; margin-bottom: 15px;">
             <button class="action-btn">اضغط هنا</button>
         </div>
-        <div class="typing-container">
+        <div class="typing-btn">
             <span id="typing"></span>
+        </div>
+
+        <!-- خط فاصل -->
+        <div class="divider"></div>
+
+        <!-- زر فيديوهاتي -->
+        <button class="videos-btn">فيديوهاتي</button>
+        <div class="videos-container">
+            <div class="video-item">فيديو 1</div>
+            <div class="video-item">فيديو 2</div>
+            <div class="video-item">فيديو 3</div>
+            <div class="video-item">فيديو 4</div>
+            <div class="video-item">فيديو 5</div>
+            <div class="video-item">فيديو 6</div>
+            <div class="video-item">فيديو 7</div>
+            <div class="video-item">فيديو 8</div>
+            <div class="video-item">فيديو 9</div>
+            <div class="video-item">فيديو 10</div>
         </div>
     </div>
 </div>
