--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <style>
 body {
     margin: 0;
-    padding: 40px 0;
+    padding: 20px 0; /* تقليل المسافة أعلى وأسفل المتصفح */
     font-family: 'Tajawal', Arial, sans-serif;
     background: linear-gradient(135deg, #00c6ff, #0072ff);
     display: flex;
@@ -26,7 +26,7 @@ body {
     text-align: right;
     direction: rtl;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
-    margin: 20px 0;
+    margin: 10px 0; /* تقليل المسافة أعلى وأسفل */
 }
 
 .card:hover {
@@ -157,7 +157,8 @@ body {
     border-radius: 12px;
     cursor: pointer;
     font-size: 16px;
-    margin-bottom: 15px;
+    float: right; /* أقصى اليمين */
+    margin-bottom: 10px;
     transition: transform 0.3s ease;
 }
 
@@ -197,6 +198,7 @@ body {
     border-radius: 12px;
     cursor: pointer;
     font-size: 16px;
+    float: right; /* أقصى اليمين */
     margin-bottom: 10px;
     transition: transform 0.3s ease;
 }
@@ -267,7 +269,7 @@ body {
     </div>
 
     <div class="card-content">
-        <!-- زر "اضغط هنا" فوق العبارات المتغيرة -->
+        <!-- زر "اضغط هنا" فوق العبارات المتغيرة وأقصى اليمين -->
         <button class="action-btn">اضغط هنا</button>
         <div class="typing-btn">
             <span id="typing"></span>
@@ -275,7 +277,7 @@ body {
 
         <div class="divider"></div>
 
-        <!-- زر "فيديوهاتي" فوق معرض الفيديوهات -->
+        <!-- زر "فيديوهاتي" فوق معرض الفيديوهات وأقصى اليمين -->
         <button class="videos-btn">فيديوهاتي</button>
         <div class="videos-container">
             <iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
