--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ body {
     margin: 0;
     padding: 20px 0;
     font-family: 'Tajawal', Arial, sans-serif;
-    background: linear-gradient(135deg, #00c6ff, #0072ff);
+    background: linear-gradient(135deg, #925c99, #140021);
     display: flex;
     justify-content: center;
     align-items: flex-start;
