--- a/index.html
+++ b/index.html
@@ -150,11 +150,11 @@ body {
 
 /* زر "اضغط هنا" Gradient */
 .action-btn {
-    background: linear-gradient(45deg, #ff8c00, #ffcc00);
+    background: linear-gradient(45deg, #410063, #00b2bb);
     color: #fff;
     border: none;
     padding: 10px 20px;
-    border-radius: 12px;
+    border-radius: 22px;
     cursor: pointer;
     font-size: 16px;
     transition: transform 0.3s ease;
