--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ body {
 
 /* زر فيديوهاتي */
 .videos-btn {
-    background: linear-gradient(45deg, #ff8c00, #ffcc00);
+    background: linear-gradient(45deg, #410063, #00b2bb);
     color: #fff;
     border: none;
     padding: 10px 20px;
