--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@ body {
 /* زر العبارات المتغيرة */
 .typing-btn {
     background-color: rgba(0, 114, 255, 0.08);
-    border: 2px solid #0072ff;
+    border: 2px solid #0072ff00;
     border-radius: 12px;
     padding: 12px;
     font-size: 16px;
