--- a/index.html
+++ b/index.html
@@ -148,7 +148,6 @@ body {
     font-size: 15px;
 }
 
-/* زر "اضغط هنا" Gradient */
 .action-btn {
     background: linear-gradient(45deg, #410063, #00b2bb);
     color: #fff;
@@ -164,7 +163,6 @@ body {
     transform: scale(1.05);
 }
 
-/* زر العبارات المتغيرة */
 .typing-btn {
     background-color: rgba(0, 114, 255, 0.08);
     border: 2px solid #0072ff00;
@@ -180,14 +178,12 @@ body {
     margin-bottom: 20px;
 }
 
-/* خط فاصل */
 .divider {
     height: 1px;
     background-color: #ddd;
     margin: 20px 0;
 }
 
-/* زر فيديوهاتي */
 .videos-btn {
     background: linear-gradient(45deg, #410063, #00b2bb);
     color: #fff;
@@ -203,7 +199,6 @@ body {
     transform: scale(1.05);
 }
 
-/* معرض الفيديوهات بالطول */
 .videos-container {
     display: flex;
     gap: 10px;
@@ -265,9 +260,9 @@ body {
     </div>
 
     <div class="card-content">
-        <!-- زر "اضغط هنا" فوق العبارات المتغيرة وأقصى اليمين -->
+
         <div style="text-align: right; margin-bottom: 10px;">
-            <button class="action-btn">اضغط هنا</button>
+            <button class="action-btn">اقتباساتى</button>
         </div>
         <div class="typing-btn">
             <span id="typing"></span>
@@ -275,7 +270,6 @@ body {
 
         <div class="divider"></div>
 
-        <!-- زر "فيديوهاتي" فوق معرض الفيديوهات وأقصى اليمين -->
         <div style="text-align: right; margin-bottom: 10px;">
             <button class="videos-btn">فيديوهاتي</button>
         </div>
@@ -296,9 +290,9 @@ body {
 
 <script>
 const words = [
-    "مرحبا بك في صفحتي الشخصية!",
-    "يمكنك استكشاف مزاجي وهواياتي هنا.",
-    "دائما أحب تجربة أشياء جديدة."
+    "توليب هو نوع من انواع الزهور",
+    "اسكن فى عالم خاص بى",
+    "لا احب الشخصيات المنافقة والكاذبة"
 ];
 
 let i = 0, j = 0, currentWord = '', isDeleting = false;
