--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@ body {
     border-radius: 12px;
     padding: 12px;
     font-size: 16px;
-    color: #0072ff;
+    color: #011937;
     font-weight: bold;
     display: block;
     width: 95%;
