--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ body {
     <div class="info-bar">
         <div class="info-item">
             <i class="fas fa-smile"></i>
-            <span>المزاج: سعيد</span>
+            <span>المزاج: متقلب جدا</span>
         </div>
         <div class="info-item">
             <i class="fas fa-star"></i>
