--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@ body {
 .profile-text h2 {
     margin: 0;
     font-size: 24px;
-    color: #0072ff;
-    text-shadow: 1px 1px 5px rgba(0, 114, 255, 0.7);
+    color: #dd7ab9;
+    text-shadow: 1px 1px 5px #000000;
 }
 
 .profile-text p {
