--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ body {
 .profile-text p {
     margin: 5px 0 0;
     font-size: 15px;
-    color: #333;
-    text-shadow: 1px 1px 2px rgba(0,0,0,0.1);
+    color: #5e4ea1;
+    text-shadow: 1px 1px 2px #000000;
 }
 
 .info-bar {
