--- a/index.html
+++ b/index.html
@@ -157,6 +157,7 @@ body {
     cursor: pointer;
     font-size: 16px;
     transition: transform 0.3s ease;
+    font-weight: bold;
 }
 
 .action-btn:hover {
