--- a/index.html
+++ b/index.html
@@ -194,6 +194,7 @@ body {
     cursor: pointer;
     font-size: 16px;
     transition: transform 0.3s ease;
+    font-weight: bold;
 }
 
 .videos-btn:hover {
