--- a/index.html
+++ b/index.html
@@ -188,6 +188,7 @@ body {
 
 .videos-btn {
     background: linear-gradient(45deg, #410063, #00b2bb);
+    font-family: 'Tajawal', Arial, sans-serif;
     color: #fff;
     border: none;
     padding: 10px 20px;
