--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ body {
 }
 
 .action-btn {
-    background: linear-gradient(45deg, #410063, #00b2bb);
+    background: linear-gradient(45deg, #000000, #dd7ab9);
     font-family: 'Tajawal', Arial, sans-serif;
     color: #fff;
     border: none;
@@ -187,7 +187,7 @@ body {
 }
 
 .videos-btn {
-    background: linear-gradient(45deg, #410063, #00b2bb);
+    background: linear-gradient(45deg, #000000, #dd7ab9);
     font-family: 'Tajawal', Arial, sans-serif;
     color: #fff;
     border: none;
