--- a/index.html
+++ b/index.html
@@ -225,6 +225,37 @@ body {
     background-color: #0072ff;
     border-radius: 4px;
 }
+
+
+
+
+
+
+
+
+
+
+/* عرض السكرول */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* خلفية مسار السكرول */
+::-webkit-scrollbar-track {
+  background: #0f1724; /* لون الخلفية */
+}
+
+/* الجزء المتحرك */
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(180deg, #c084fc, #7c3aed);
+  border-radius: 10px;
+}
+
+/* عند المرور بالماوس */
+::-webkit-scrollbar-thumb:hover {
+  background: linear-gradient(180deg, #a855f7, #6d28d9);
+}
+
 </style>
 </head>
 <body>
